Bug 94198 - Print Document Directly Tooltip No Longer Shows Printer
Summary: Print Document Directly Tooltip No Longer Shows Printer
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.0.5 release
Hardware: All All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:5.1.0 target:5.0.3
Keywords: regression
Depends on:
Blocks: Print-Directly
  Show dependency treegraph
 
Reported: 2015-09-13 21:00 UTC by Jamie Nettles
Modified: 2017-09-24 09:47 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jamie Nettles 2015-09-13 21:00:20 UTC
Prior to 5.0, the Print Document Directly tooltip would indicate the printer that would be printed to. This was extremely useful when using a laptop at different locations. The user could tell if they needed to change the default printer before printing.  Now, for someone who travels from location to location, the Print Document Directly is not really useful anymore, since the document might go to the local printer or it might be directed to a printer that is not currently accessible.
Comment 1 Adolfo Jayme Barrientos 2015-09-14 12:47:51 UTC
@Jay: Is this something you can investigate? Thanks.
Comment 2 Yousuf Philips (jay) (retired) 2015-09-14 15:22:30 UTC
I see the printer as part of the tooltip in 5.0 daily and master.
Comment 3 Jamie Nettles 2015-09-14 16:19:01 UTC
Here's some additional information about my configuration.

OS: Windows 8.1
CPU: Intel

If I mouse over the toolbar button, the tooltip just says "Print Document Directly".  But if I right click the button and then mouse over "Visible Buttons" it shows a list of buttons, including "Print Document Directly (A Home)" where "A Home" is the name I've given to my printer.

I saw the same behavior yesterday when I was at a different location using a different printer.

I tried removing the button from the toolbar and adding it back in, no joy.

If you would like for me to try something else to help diagnose the problem, I would be more than happy to oblige.
Comment 4 Jamie Nettles 2015-09-14 16:22:42 UTC
I just thought of something.  Just a wild guess, but what if the tooltip size was set prior to adding in the printer text, so that on the list of buttons everything works fine but on the tooltip the printer text is truncated. The additional piece of the puzzle would be that some operating systems adjust the size of the tooltip based on the size of the text but 8.1 doesn't.
Comment 5 Yousuf Philips (jay) (retired) 2015-09-14 16:30:03 UTC
So i see this goes back to 4.4 when the string was changed from 'Print File Directly (printer_name)' to its current 'Print Document Directly'. I believe samuel changed the string, but dont know why it appears one way in the context menu and another way in the tooltip.
Comment 6 Yousuf Philips (jay) (retired) 2015-09-14 16:34:07 UTC
Lets CC samuel to give his opinion. Just to clarify, when i said 'Print File Directly (printer_name)', that was the text of the tooltip and not the text found in the xcu file.
Comment 7 Samuel Mehrbrodt 2015-09-14 16:38:28 UTC
I think this is caused by http://cgit.freedesktop.org/libreoffice/core/commit/?id=1fb8724f9834dbc07b741eeed31b31347bc0c2a1

Will have a look at it.
Comment 8 Commit Notification 2015-09-15 09:52:24 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4890dd0c441a6c95003fe91ad1d983de6b49ec57

tdf#94198 Printer missing from tooltip

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2015-09-15 12:14:57 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=788fb4a0152d64c431c0c6062045a742ef80f40b&h=libreoffice-5-0

tdf#94198 Printer missing from tooltip

It will be available in 5.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.