tdf#94198 Printer missing from tooltip

Need to update the tooltip also on state change.
This partially reverts the fix for tdf#83558, 1fb8724f9834dbc07b741eeed31b31347bc0c2a1
Verified that the fix for tdf#83558 still works.

Change-Id: I023a5e4b101dc91522f19b0d3ed2ed0c4a47e64b
Reviewed-on: https://gerrit.libreoffice.org/18586
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>